<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_register"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:src="@drawable/sprout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SetUsrName"
        android:textSize="22dp"
        android:textColor="@color/black"
        android:layout_alignBottom="@id/img_register"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_register"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usrName"
            style="@style/inputStyle_login"
            android:inputType="phone"
            android:hint="@string/InputUsrName"/>

        <Button
            android:id="@+id/btn_SetUsrName"
            style="@style/btnStyle_welcome"
            android:text="@string/OpenSprout" />

    </LinearLayout>

</RelativeLayout>

