<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usrName"
            style="@style/inputStyle_login"
            android:inputType="phone"
            android:hint="@string/InputUsrTelphone"/>
        <EditText
            android:id="@+id/usrPassword"
            style="@style/inputStyle_login"
            android:inputType="textPassword"
            android:hint="@string/InputUsrPassword"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="50dp"
            android:text="@string/CannotLogin"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="10dp"
            style="@style/btnStyle_welcome"
            android:text="@string/login_welcome" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/OtherLoginMethod" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/black" />
            </LinearLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:columnCount="4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/qq" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/weixin" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/weibo" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/facebook" />
            </GridLayout>
        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>

