<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_welcome_logo"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/img_welcome_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_welcome_logo"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_welcome_login"
            style="@style/btnStyle_welcome"
            android:text="@string/login_welcome" />

        <Button
            android:id="@+id/btn_welcome_register"
            style="@style/btnStyle_welcome"
            android:text="@string/register_welcome" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/OtherLoginMethod" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/black" />
            </LinearLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:columnCount="4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/qq" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/weixin" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/weibo" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/facebook" />
            </GridLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>

